--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "plotly>=6.5.0",
+    "polars>=1.35.2",
     "python-dotenv>=1.2.1",
 ]
 
